# gitserver

./: .gitignore  README.md
clientserver-main/: CMakeLists.txt  Makefile  README.md
clientserver-main/Project/: Makefile  article.cc  article.h  articletest  articletest.cc  client.cc  database.h  database_disk.cc  database_primary.cc  database_primary_tester  database_primary_tester.cc  messagehandler.cc  messagehandler.h  newsgroup.cc  newsgroup.h  server_interface  server_interface.cc  servermsghandler.cc  servermsghandler.h
clientserver-main/example/: CMakeLists.txt  Makefile  myclient  myclient.cc  myserver  myserver.cc
clientserver-main/include/: badartnumber.h  badngnumber.h  clientmisbehavedexception.h  connection.h  connectionclosedexception.h  protocol.h  server.h
clientserver-main/src/: CMakeLists.txt  connection.cc  server.cc
